tests/idris2/coverage004/expected
1/1: Building Cover (Cover.idr)
Error: While processing left hand side of bad. Can't match on Just (fromInteger 0) as it has a polymorphic type.

Cover.idr:14:1--14:4
    |
 14 | bad (Just 0) _ = False
    | ^^^

Main> Main.okay: okay (S _) IsNat
okay False IsBool
Main> Bye for now!
